# Student_performance_KUBEFLOW_MLFLOW

./: .gitignore  README.md  SECURITY_GUIDE.md  docker-compose.yml  main.py  params.yaml  pyproject.toml  requirements.txt  run_pipeline.sh
components/data-ingestion/: Dockerfile  ingestion.py
components/data-transformation/: Dockerfile  transform.py
components/model-training/: Dockerfile  train.py
